--- a/requirements.txt
+++ b/requirements.txt
@@ -55,6 +55,7 @@ prompt-toolkit==3.0.5
 ptyprocess==0.6.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+psycopg2==2.8.6
 Pygments==2.6.1
 PyJWT==1.7.1
 python-dateutil==2.8.1
