--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,8 @@ python:
   - "3.7"
 install:
   - pip install -r requirements.txt
+env:
+  - SECRET_KEY=totalllyfake
+  - DEBUG=0
 script:
   - python manage.py test
