--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,4 @@ env:
   - SECRET_KEY=totalllyfake DEBUG=0 EMAIL_BACKEND=django.core.mail.backends.dummy.EmailBackend PUBLIC_URL=https://skcema.org/
 script:
   - python manage.py test
+  - echo "replace me with a linter!"
