--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ django-filer==1.7.1
 django-formtools==2.2
 django-fsm==2.7.0
 django-fsm-admin==1.2.4
+django-heroku==0.3.1
 django-ipware==2.1.0
 django-jazzmin==2.2.6
 django-js-asset==1.2.2
@@ -34,7 +35,7 @@ djangocms-admin-style==1.5.0
 djangocms-cascade==1.3.2
 djangocms-text-ckeditor==3.9.1
 djangorestframework==3.11.0
-djangorestframework-simplejwt==4.4.0
+djangorestframework-simplejwt==4.5.0
 djoser==2.0.3
 easy-thumbnails==2.7
 Faker==4.1.1
@@ -50,7 +51,7 @@ oauth2client==4.1.3
 parso==0.7.0
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==7.1.2
+Pillow==8.0.1
 prompt-toolkit==3.0.5
 ptyprocess==0.6.0
 pyasn1==0.4.8
