--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ django-js-asset==1.2.2
 django-mptt==0.11.0
 django-polymorphic==2.1.2
 django-post-office==3.4.1
+django-rename-app==0.1.2
 django-rest-auth==0.9.5
 django-sekizai==1.1.0
 django-select2==7.4.2
@@ -45,6 +46,7 @@ djangorestframework-simplejwt==4.6.0
 djoser==2.0.3
 easy-thumbnails==2.7
 Faker==4.1.1
+gunicorn==20.0.4
 html5lib==1.1
 httplib2==0.18.1
 idna==2.10
@@ -71,11 +73,12 @@ PyJWT==1.7.1
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2020.1
-requests==2.24.0
+requests==2.25.1
 rsa==4.6
 s3transfer==0.3.3
 six==1.15.0
 sqlparse==0.3.1
+stripe==2.55.1
 text-unidecode==1.3
 toml==0.10.2
 traitlets==4.3.3
@@ -85,4 +88,3 @@ urllib3==1.25.9
 wcwidth==0.2.5
 webencodings==0.5.1
 whitenoise==5.2.0
-gunicorn==20.0.4
